@@ -13,9 +13,6 @@ lib/AnyEvent/Impl/EventLib.pm
 lib/AnyEvent/Impl/Glib.pm
 lib/AnyEvent/Impl/Tk.pm
 lib/AnyEvent/Impl/Perl.pm
-lib/AnyEvent/Impl/Coro.pm
-lib/AnyEvent/Impl/CoroEV.pm
-lib/AnyEvent/Impl/CoroEvent.pm
 lib/AnyEvent/Impl/Qt.pm
 lib/AnyEvent/Impl/POE.pm
 t/00_load.t
